--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 /* 导入所有样式文件 */
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 @import './variables.css';
 @import './layout.css';
 @import './inputs.css';
